force-app/main/default/objects/Account/fields/Citi_City__c.field-meta.xml
<CustomField>
    <fullName>Citi_City__c</fullName>
    <label>Citi City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>