force-app/main/default/objects/Account/fields/Citi_Mailing_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Citi_Mailing_Address_3__c</fullName>
    <label>Citi Mailing Address 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>