force-app/main/default/objects/Account/fields/Citi_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Citi_Postal_Code__c</fullName>
    <label>Citi Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>